deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caas
  labels:
    app: caas
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: caas
  template:
    metadata:
      labels:
        app: caas
    spec:
      containers:
        - name: caas
          image: redbridge/caas:3
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8080
          resources:
            requests:
              memory: 32Mi
              cpu: 100m
            limits:
              memory: 64Mi
