service.yaml
apiVersion: v1 
kind: Service 
  metadata: 
    name: caas 
  spec: 
    selector: 
      app: caas 
    ports: 
      - protocol: TCP 
        targetPort: 8080 
        name: port-8080-tcp 
        port: 8080
