route.yaml
apiVersion: route.openshift.io/v1
kind: Route
  metadata:
    labels:
      argocd.argoproj.io/instance: caas
      name: caas
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: caas
      weight: 100
